# codex

./: CMakeLists.txt  README.md
.github/workflows/: ContinuousIntegration.yml
cmake/: develop_dependencies.cmake  release_dependencies.cmake  unit_testing.cmake  unit_testing_python.cmake
python/src/: CovarianceBlock.python.cpp  CovarianceMatrix.python.cpp  MetaData.python.cpp  codex.python.cpp  format.endf.python.cpp  format.python.cpp  matrix.python.cpp
python/test/: CMakeLists.txt  Test_codex_CovarianceBlock.py  Test_codex_CovarianceMatrix.py  Test_codex_MetaData.py  Test_codex_matrix.py
python/test/format/endf/: Test_codex_format_endf_SquareMatrix.py
src/: codex.hpp
src/codex/: CovarianceBlock.hpp  CovarianceMatrix.hpp  MetaData.hpp  format.hpp  formats.hpp  matrix.hpp
src/codex/CovarianceBlock/src/: calculateCorrelations.hpp  calculateEigenvalues.hpp  calculateStandardDeviations.hpp  calculateUncertainties.hpp  ctor.hpp  verifyMatrix.hpp  verifyStandardDeviations.hpp
src/codex/CovarianceBlock/test/: CMakeLists.txt  CovarianceBlock.test.cpp
src/codex/CovarianceMatrix/src/: constructCovarianceMatrix.hpp  ctor.hpp  getDiagonalBlockIndices.hpp
src/codex/CovarianceMatrix/test/: CMakeLists.txt  CovarianceMatrix.test.cpp
src/codex/MetaData/src/: ctor.hpp  verifyEnergies.hpp
src/codex/MetaData/test/: CMakeLists.txt  MetaData.test.cpp
src/codex/format/: endf.hpp
src/codex/format/endf/: fromENDF.hpp
src/codex/format/endf/test/: CMakeLists.txt  SquareMatrix.test.cpp
src/codex/formats/: endf.hpp
src/codex/formats/endf/: fromENDF.hpp
src/codex/formats/endf/test/: CMakeLists.txt  SquareMatrix.test.cpp
src/codex/matrix/test/: CMakeLists.txt  matrix.test.cpp
